--- a/2_environ_NMDS.Rmd
+++ b/2_environ_NMDS.Rmd
@@ -1591,7 +1591,7 @@ fig_twi
 fig_fire <- ggplot(data = environ_trans,
        aes(x = fire_event_count, 
            y = grass_nonnative*100)) + 
-      geom_point(aes(color = cluster), size = 3) 
+      geom_point(aes(color = cluster), size = 3) +
    # scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +
   geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval
   labs(
